fixed profile icon alignment on templates page tracker module

--- a/packages/theme/styles/components.scss
+++ b/packages/theme/styles/components.scss
@@ -1823,7 +1823,9 @@
   flex-wrap: nowrap;
   min-width: 0;
 
-  .ap-icon { 
+  .ap-icon {
+    display: flex;
+    align-items: center;
     color: var(--theme-dark-color);
     height: 100%;
     aspect-ratio: 1;
